# patternity

./: .gitignore  LICENSE  README.md  setup.cfg
.github/: publish.yml
src/patternity/: __init__.py  collector.py  pattern.py
