[metadata]
name = patternity
version = attr: patternity.__version__
author = Artyom Vancyan
author_email = artyom.vancyan2000@gmail.com
description = Predict stock prices using a deterministic algorithm inspired by LSTM, focusing on pattern recognition in historical data.
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code=https://github.com/ArtyomVancyan/patternity/
keywords =
    finance
    crypto
    trading
    pattern
    prediction
    stock
    forex
    lstm
    deterministic
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages =
    patternity
install_requires =
    numpy>=1.26.0
    matplotlib>=3.8.0
    yfinance>=0.2.33
    python-binance>=1.0.17
include_package_data = yes
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
